# eez-backup

./: .gitignore  README.md  backup.py  example_config.yml  install.sh  pyproject.toml
eez_backup/: cli.py  command.py  config.py  monitor.py  profile.py
tests/: e2e_test.py  test_end2end.py
tests/demo/: config.toml  config.yml
tests/demo/data_1/: geburt.txt  wetter.md
tests/demo/data_2/: mögen.txt  sagen.md
