[project]
name = "eez-backup"
version = "0.2.0"
license = "MIT"
authors = ["0b11001111 <19192307+0b11001111@users.noreply.github.com>"]
repository = "https://github.com/0b11001111/eez-backup"
description = "Another convenience wrapper for _restic_"
readme = "README.md"
keywords = ["backup", "restic"]
classifiers = [
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed"
]
requires-python = ">=3.13"

dependencies = [
    "frozendict>=2.4.6",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "secretstorage>=3.3.3",
]

[tool.ruff]
line-length = 118
